@@ -1,7 +1,8 @@
 package com.project.reactdashboard.infrastructure.stock.controllers.mapper;
 
-import com.project.reactdashboard.domain.stock.entities.Stock;
+import com.project.reactdashboard.domain.stock.model.StockModel;
 import com.project.reactdashboard.infrastructure.stock.controllers.StockDto;
+import com.project.reactdashboard.infrastructure.stock.entities.Stock;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -10,6 +11,7 @@ import java.util.List;
 import static com.project.reactdashboard.ObjectRandomizer.randomList;
 import static com.project.reactdashboard.ObjectRandomizer.randomStock;
 import static com.project.reactdashboard.ObjectRandomizer.randomStockDto;
+import static com.project.reactdashboard.ObjectRandomizer.randomStockModel;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class StockMapperTest {
@@ -25,7 +27,7 @@ public class StockMapperTest {
     void toEntity() {
         StockDto dto = randomStockDto();
 
-        Stock stockApplication = mapper.toEntity(dto);
+        StockModel stockApplication = mapper.toModel(dto);
 
         assertEquals("2019-02-01T00:00Z", stockApplication.getDate().toString());
         assertEquals(dto.getSymbol(), stockApplication.getSymbol());
@@ -37,39 +39,54 @@ public class StockMapperTest {
     }
 
     @Test
+    void toModel() {
+        Stock stock = randomStock();
+
+        StockModel stockModel = mapper.toModel(stock);
+
+        assertEquals(stock.getDate(), stockModel.getDate());
+        assertEquals(stock.getSymbol(), stockModel.getSymbol());
+        assertEquals(stock.getVolume(), stockModel.getVolume());
+        assertEquals(stock.getHigh(), stockModel.getHigh());
+        assertEquals(stock.getLow(), stockModel.getLow());
+        assertEquals(stock.getOpen(), stockModel.getOpen());
+        assertEquals(stock.getClose(), stockModel.getClose());
+    }
+
+    @Test
     void toDto() {
-        Stock stockApplication = randomStock();
+        StockModel stockModel = randomStockModel();
 
-        StockDto dto = mapper.toDto(stockApplication);
+        StockDto dto = mapper.toDto(stockModel);
 
-        assertEquals(dto.getId(), stockApplication.getId());
-        assertEquals(dto.getDate(), stockApplication.getDate().toString());
-        assertEquals(dto.getSymbol(), stockApplication.getSymbol());
-        assertEquals(dto.getName(), stockApplication.getSymbolValues().getName());
-        assertEquals(dto.getVolume(), stockApplication.getVolume());
-        assertEquals(dto.getHigh(), stockApplication.getHigh());
-        assertEquals(dto.getLow(), stockApplication.getLow());
-        assertEquals(dto.getOpen(), stockApplication.getOpen());
-        assertEquals(dto.getClose(), stockApplication.getClose());
+        assertEquals(dto.getId(), stockModel.getId());
+        assertEquals(dto.getDate(), stockModel.getDate().toString());
+        assertEquals(dto.getSymbol(), stockModel.getSymbol());
+        assertEquals(dto.getName(), stockModel.getSymbolValues().getName());
+        assertEquals(dto.getVolume(), stockModel.getVolume());
+        assertEquals(dto.getHigh(), stockModel.getHigh());
+        assertEquals(dto.getLow(), stockModel.getLow());
+        assertEquals(dto.getOpen(), stockModel.getOpen());
+        assertEquals(dto.getClose(), stockModel.getClose());
     }
 
     @Test
     void toListDto() {
-        List<Stock> stockApplications = randomList(i -> randomStock());
+        List<StockModel> stockModels = randomList(i -> randomStockModel());
 
-        List<StockDto> dtos = mapper.toListDto(stockApplications);
+        List<StockDto> dtos = mapper.toListDto(stockModels);
 
-        assertEquals(stockApplications.size(), dtos.size());
-        assertEquals(stockApplications.get(0).getId(), dtos.get(0).getId());
+        assertEquals(stockModels.size(), dtos.size());
+        assertEquals(stockModels.getFirst().getId(), dtos.getFirst().getId());
     }
 
     @Test
     void toList() {
         List<StockDto> dtos = randomList(i -> randomStockDto());
 
-        List<Stock> stockApplications = mapper.toListDomain(dtos);
+        List<StockModel> stockModels = mapper.toListDomain(dtos);
 
-        assertEquals(dtos.size(), stockApplications.size());
-        assertEquals(dtos.get(0).getId(), stockApplications.get(0).getId());
+        assertEquals(dtos.size(), stockModels.size());
+        assertEquals(dtos.getFirst().getId(), stockModels.getFirst().getId());
     }
 }
